# build-your-own-inference-server

./: .gitignore  Cargo.toml  README.md
config/: default.toml
docs/: 01-conceptual-foundations.md  02-architecture.md  04-walkthrough.md  05-setup-deployment.md  06-production.md  08-extensions.md  README.md
models/: README.md
src/: config.rs  error.rs  lib.rs  main.rs  metrics.rs  queue.rs
src/model/: mock.rs  mod.rs  onnx.rs
src/pipeline/: mod.rs  postprocess.rs  tokenizer.rs
src/server/: handlers.rs  middleware.rs  mod.rs  state.rs
tests/: integration_test.rs  load_test.rs
